--- a/static/pages/profile.html
+++ b/static/pages/profile.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="public/index.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="../public/index.css" />
+    <title>Профиль</title>
   </head>
   <body>
-    <script src="public/index.js" type="module"></script>
+    <script src="../../src/pages/profile/index.js" type="module"></script>
     <main>
       <div id="root"></div>
     </main>
