--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
     <title>Чат</title>
   </head>
   <body>
-    <script src="./public/index.js" type="module"></script>
+    <script src="./public/index.ts" type="module"></script>
     <main>
       <div id="root"></div>
     </main>
