--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
     <head>
         <meta charset="utf-8" />
-        <title>Webpack App</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Messenger</title>
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
     </head>
     <body>
       <main>
